- FF mousewheel bug fixed - removed wrong padding from popup

--- a/css/modules/mod_page_bot.css
+++ b/css/modules/mod_page_bot.css
@@ -6,8 +6,8 @@
 --------------------------------*/
 .slider { position: relative; height: 119px; margin: 0 5px; }
 .slider-outer { padding-top: 3px; background: #fff; width: 100%; overflow: hidden; height: 90px; }
-.slider-inner { width: 3000px }
-.slider-list {margin: 0 10px }
+.slider-inner {	position: relative;width: 10000px }
+.slider-list {margin: 0 10px; float:left }
 .slider-item { position: relative; float: left; width: 74px; height: 88px; margin: 0 4px; padding: 3px 10px 0; border-top: 3px solid #FFF; text-align: center; }
 .slider-item:hover, .active.slider-item { background: #eff1f1; background: -moz-linear-gradient(top, #eff1f1 0%, #ffffff 100%); background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#eff1f1), color-stop(100%,#ffffff)); background: -webkit-linear-gradient(top, #eff1f1 0%,#ffffff 100%); background: -o-linear-gradient(top, #eff1f1 0%,#ffffff 100%); background: -ms-linear-gradient(top, #eff1f1 0%,#ffffff 100%); filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#eff1f1', endColorstr='#ffffff',GradientType=0 ); background: linear-gradient(top, #eff1f1 0%,#ffffff 100%); border-top: 3px solid #C33130; }
 .slider-item:hover .slider-item-title, .active .slider-item-title { color: #b63c3c }
